<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Ban Luck</string>
    <!--  TESTING  -->
    <string name="adMobAppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="adUnitId_Banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adUnitId_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <!--  LIVE  -->
    <!--    <string name="adMobAppId">ca-app-pub-9307440651954861~3442958355</string>-->
    <!--    <string name="adUnitId_Banner">ca-app-pub-9307440651954861/2129876683</string>-->
    <!--    <string name="adUnitId_Interstitial">ca-app-pub-9307440651954861/5602024317</string>-->

    <string name="aces">Aces</string>
    <string name="ban_luck">Ban Luck</string>
    <string name="start_game">Start Game</string>
    <string name="card">Card</string>
    <string name="deck">Deck</string>
    <string name="deal">Deal</string>
    <string name="done">Done</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost…</string>
    <string name="next_match">Next match</string>
    <string name="end">End</string>
    <string name="again">Again</string>
    <string name="game_won">You\'ve won!</string>
    <string name="game_lost">You\'ve lost…</string>
    <string name="game_tie">It\'s a tie</string>
    <string name="game_run">RUN!!!!</string>
    <string name="game_summary">W-%d L-%d\nT-%d R-%d</string>
    <string name="won_summary">Won: %d</string>
    <string name="lost_summary">Lost: %d</string>
    <string name="run_summary">Run: %d</string>
    <string name="tie_summary">Tie: %d</string>
    <string name="chinese_blackjack">Chinese Blackjack</string>
    <string name="rules">Rules</string>
    <string name="rules_text">
        Rules according to Wikipedia\n\n
        Point counting:\n
        - K, Q, J = 10\n
        - 10, 9, 8, 7, 6, 5, 4, 3, 2 = respective face value\n
        - If your total number of cards is 2, then Ace = 11 or 10\n
        - If your total number of cards is 3, then Ace = 10 or 1\n
        - If your total number of cards is 4 or 5, then Ace = 1\n\n
        Checking for Blackjack:\n
        - Ace + Ace = ban-ban\n
        - Ace + (10/J/Q/K) = ban-luck\n
        - 15 points = free hand\n
        - 7-7-7\n\n
        Dealing:\n
        - total &lt; 16, hit (add one card).\n
        - total &gt;= 16 and &lt; 21, hit or stand.\n
        - total = 21, stand.\n
        - total &gt; 21, busts.\n
    </string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="ongoing">Ongoing</string>
    <string name="image">image</string>
</resources>