<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.game.GameFragment">

    <data>

        <variable
            name="gameViewModel"
            type="com.fiyepr.banluck.screens.game.GameViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/game_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/deck"
                style="@style/game_card"
                android:contentDescription="@string/deck"
                app:layout_constraintBottom_toTopOf="@+id/player_card_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/com_card_3"
                tools:src="@drawable/blue_back" />

            <Button
                android:id="@+id/button_deal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->gameViewModel.onDeal()}"
                android:text="@string/deal"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_done"
                app:layout_constraintEnd_toStartOf="@+id/txt_player_card_val"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{gameViewModel.doneButtonEnabled}"
                android:onClick="@{()->gameViewModel.onDone()}"
                android:text="@string/done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txt_player_card_val"
                app:layout_constraintTop_toBottomOf="@+id/txt_player_card_val" />

            <ImageView
                android:id="@+id/player_card_1"
                style="@style/game_card"
                android:contentDescription="@string/card"

                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/player_card_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/player_card_3"
                tools:src="@drawable/gray_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/player_card_5"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/player_card_4"
                app:layout_constraintTop_toTopOf="@+id/player_card_4"
                tools:src="@drawable/gray_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/player_card_2"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/player_card_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/player_card_1"
                app:layout_constraintTop_toTopOf="@+id/player_card_3"
                tools:src="@drawable/gray_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/player_card_4"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/player_card_5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/player_card_3"
                app:layout_constraintTop_toTopOf="@+id/player_card_3"
                tools:src="@drawable/gray_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/player_card_3"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/txt_player_card_val"
                app:layout_constraintEnd_toStartOf="@+id/player_card_4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/player_card_2"
                app:layout_constraintTop_toBottomOf="@+id/deck"
                tools:src="@drawable/gray_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/com_card_1"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/com_card_2"
                app:layout_constraintEnd_toStartOf="@+id/com_card_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@drawable/yellow_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/com_card_2"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/com_card_3"
                app:layout_constraintEnd_toStartOf="@+id/com_card_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/com_card_1"
                tools:src="@drawable/yellow_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/com_card_3"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/deck"
                app:layout_constraintEnd_toStartOf="@+id/com_card_4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/com_card_2"
                app:layout_constraintTop_toBottomOf="@+id/txt_com_card_val"
                tools:src="@drawable/yellow_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/com_card_4"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/com_card_3"
                app:layout_constraintEnd_toStartOf="@+id/com_card_5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/com_card_3"
                tools:src="@drawable/yellow_back"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/com_card_5"
                style="@style/game_card"
                android:contentDescription="@string/card"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/com_card_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/com_card_4"
                tools:src="@drawable/yellow_back"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/txt_com_card_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{gameViewModel.comCardText}"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/com_card_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="24"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/txt_player_card_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{gameViewModel.playerCardText}"
                app:layout_constraintBottom_toTopOf="@+id/button_done"
                app:layout_constraintEnd_toStartOf="@+id/button_done"
                app:layout_constraintStart_toEndOf="@+id/button_deal"
                app:layout_constraintTop_toBottomOf="@+id/player_card_3"
                tools:text="21" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gameOverLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B97A7A7A"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="305dp">

            <TextView
                android:id="@+id/txt_game_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_end_game"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_again"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/you_won" />

            <Button
                android:id="@+id/button_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/again"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_game_over"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_end_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txt_game_over"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>
